--- a/_posts/2014-12-05-gmail.markdown
+++ b/_posts/2014-12-05-gmail.markdown
@@ -7,6 +7,8 @@ comments: true
 imglink: http://hosseinkarami.com/assets/img/post/typewriter.jpg
 imgauthor: http://florianklauer.de/
 imgauthorname: Florian Klauer
+category: general
+tags: [django, django-tempalte, pytone]
 ---
 ![alt text]({{site.url}}/assets/img/post1.jpg)
 
