--- a/_posts/2014-12-05-win10.markdown
+++ b/_posts/2014-12-05-win10.markdown
@@ -1,12 +1,14 @@
 ---
 layout: post
-title:  "با 3 ویژگی برتر و مهم اما پنهان ویندوز 10 آشنا شوید  "
+title:  "با 3 ویژگی برتر و مهم اما پنهان ویندوز 10 آشنا شوید"
 permalink: 
 parsidate: جمعه ۱5 آبان ۱۳۹4
 comments: true
 imglink: http://hosseinkarami.com/assets/img/post/typewriter.jpg
 imgauthor: http://florianklauer.de/
 imgauthorname: Florian Klauer
+category: general
+tags: [djongo, django-tempalte, pyton]
 ---
 ![alt text]({{site.url}}/assets/img/post2.1.jpg)
 
