--- a/_posts/2014-12-05-win10.markdown
+++ b/_posts/2014-12-05-win10.markdown
@@ -8,7 +8,7 @@ imglink: http://hosseinkarami.com/assets/img/post/typewriter.jpg
 imgauthor: http://florianklauer.de/
 imgauthorname: Florian Klauer
 category: general
-tags: [djongo, django-tempalte, pyton]
+tags: [django, django-tempalte, pytone]
 ---
 ![alt text]({{site.url}}/assets/img/post2.1.jpg)
 
