--- a/_posts/2014-12-05-gmail.markdown
+++ b/_posts/2014-12-05-gmail.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "۴ نکته ساده برای بهتر پاسخ‌ دادن به ایمیل‌ها در جیمیل "
+title:  "آموزش کامل طراحی وب سایت در فتوشاپ با جزییات "
 permalink: 
 parsidate: جمعه ۱5 آبان ۱۳۹4
 comments: true
@@ -11,10 +11,11 @@ category: IT
 tags: [gmail]
 ---
 ![alt text]({{site.url}}/assets/img/post1.jpg)
-
-ادامه با نکاتی آشنا می‌شوید که به شما کمک می‌کنند تا در جیمیل پاسخ‌های بهتری را ارسال کنید.
-
-احتمالا تا به حال با ترفندهای زیادی در جیمیل آشنا شده‌اید با این حال همیشه دانستن نکات بیشتر درباره‌ی جیمیل  
+در این ارسال نحوه طراحی یک وب سایت در فتوشاپ را همراه با کلیه جزییات آموزش خواهم داد.
+این وب سایت به عنوان نمونه برای یک موسسه خدمات اتومبیل طراحی خواهد شد اما با تغییر
+محتوا و تصاویر آن به سادگی برای هر موضوعی قابل استفاده است . در طراحی این وب سایت بسیاری از بخش های
+مورد استفاده و رایج در وب سایت ها مانند لوگو ،نوار جستجو،نوار منو،گالری تصاویر ،پنل ورود،بلاگ ،خدمات
+،توضیحات و سرآیند و بخش پایینی سایت در نظر گرفته شده است.
 
 # 1. موضوع را عوض کنید
    وقتی که شما می‌خواهید به ایمیلی پاسخ دهید بخش “موضوع” مخفی است و شما عموما آن را تغییر نمی‌دهید و همین باعث   
