--- a/_posts/2014-12-05-gmail.markdown
+++ b/_posts/2014-12-05-gmail.markdown
@@ -13,7 +13,8 @@ tags: [gmail]
 ![alt text]({{site.url}}/assets/img/post1.jpg)
 
 
-در این ارسال نحوه طراحی یک وب سایت در فتوشاپ را همراه با کلیه جزییات آموزش خواهم داد.
+در این ارسال نحوه طراحی یک وب سایت در فتوشاپ را همراه با کلیه جزییا
+ت آموزش خواهم داد.
 این وب سایت به عنوان نمونه برای یک موسسه خدمات اتومبیل طراحی خواهد شد اما با تغییر
 محتوا و تصاویر آن به سادگی برای هر موضوعی قابل استفاده است . در طراحی این وب سایت بسیاری از بخش های
 مورد استفاده و رایج در وب سایت ها مانند لوگو ،نوار جستجو،نوار منو،گالری تصاویر ،پنل ورود،بلاگ ،خدمات
