--- a/_posts/2014-12-05-gmail.markdown
+++ b/_posts/2014-12-05-gmail.markdown
@@ -19,10 +19,9 @@ tags: [gmail]
 محتوا و تصاویر آن به سادگی برای هر موضوعی قابل استفاده است . در طراحی این وب سایت بسیاری از بخش های
 مورد استفاده و رایج در وب سایت ها مانند لوگو ،نوار جستجو،نوار منو،گالری تصاویر ،پنل ورود،بلاگ ،خدمات
 ،توضیحات و سرآیند و بخش پایینی سایت در نظر گرفته شده است.
-. به سبب وجود آیتم های متنوع و کاربردی در این آمورش می توانید دیگر پروژه های طراحی وب سایت
- خود را با دست باز و خلاقیت بیشتری ارائه کنید.
-# 1. موضوع را عوض کنید
-   وقتی که شما می‌خواهید به ایمیلی پاسخ دهید بخش “موضوع” مخفی است و شما عموما آن را تغییر نمی‌دهید و همین باعث   
+
+قدم 1 : ایجاد فایل و انجام تنظیمات#
+   وقتی که شما می‌خواهید به ایمیلی پاسخ دهید بخش “موضوع” مخفی است و شما عموما آن را تغییر نمی‌دهید و همین باعث
    می‌شود موضوع ایمیل ارسالی شما ظاهر خوبی نداشته باشد. با کلیک کردن بر روی فلش کوچک رو به پایین که در تصاویر   
    زیر می‌بینید، می‌توانید موضوع ایمیل خودتان را تغییر دهید. پس از بازشدن منوی مربوطه بر روی Edit subject کلیک  
    کنید.
