--- a/_posts/2014-12-05-gmail.markdown
+++ b/_posts/2014-12-05-gmail.markdown
@@ -20,8 +20,7 @@ tags: [gmail]
 مورد استفاده و رایج در وب سایت ها مانند لوگو ،نوار جستجو،نوار منو،گالری تصاویر ،پنل ورود،بلاگ ،خدمات
 ،توضیحات و سرآیند و بخش پایینی سایت در نظر گرفته شده است.
 
-#1: ایجاد فایل و انجام تنظیمات
-
+#قدم 1:ایجاد فایل و انجام تنظیمات
 
    وقتی که شما می‌خواهید به ایمیلی پاسخ دهید بخش “موضوع” مخفی است و شما عموما آن را تغییر نمی‌دهید و همین باعث
    می‌شود موضوع ایمیل ارسالی شما ظاهر خوبی نداشته باشد. با کلیک کردن بر روی فلش کوچک رو به پایین که در تصاویر   
