--- a/_posts/2014-12-05-gmail.markdown
+++ b/_posts/2014-12-05-gmail.markdown
@@ -22,10 +22,11 @@ tags: [gmail]
 
 #1:ایجاد فایل و انجام تنظیمات
 
-   وقتی که شما می‌خواهید به ایمیلی پاسخ دهید بخش “موضوع” مخفی است و شما عموما آن را تغییر نمی‌دهید و همین باعث
-   می‌شود موضوع ایمیل ارسالی شما ظاهر خوبی نداشته باشد. با کلیک کردن بر روی فلش کوچک رو به پایین که در تصاویر   
-   زیر می‌بینید، می‌توانید موضوع ایمیل خودتان را تغییر دهید. پس از بازشدن منوی مربوطه بر روی Edit subject کلیک  
-   کنید.
+فتوشاپ را باز کرده و یک سند با سایز 1400px در 1850px ایجاد نمایید.
+ابزار خط کش (Rule Tool) در این آموزش بسیار کاربردی است
+ بنابراین مطمئن شوید که خط کش (Ruler) و خطوط راهنما (Guide) فعال باشند :
+ *Ruler : Ctrl + R
+ *Guide : Ctrl + ;
 
 # 2. بخش‌های Cc و Bcc را پر کنید.
    به صورت پیش فرض این دو بخش نیز مخفی هستند. با کلیک کردن بر روی بخش To این دو گزینه نیز اضافه می‌شوند.
