--- a/_posts/2014-12-05-gmail.markdown
+++ b/_posts/2014-12-05-gmail.markdown
@@ -25,10 +25,12 @@ tags: [gmail]
 فتوشاپ را باز کرده و یک سند با سایز 1400px در 1850px ایجاد نمایید.
 ابزار خط کش (Rule Tool) در این آموزش بسیار کاربردی است
  بنابراین مطمئن شوید که خط کش (Ruler) و خطوط راهنما (Guide) فعال باشند :
- *Ruler : Ctrl + R
 
 
- *Guide : Ctrl + ;
+ Ruler : Ctrl + R
+
+
+ Guide : Ctrl + ;
 
 # 2. بخش‌های Cc و Bcc را پر کنید.
    به صورت پیش فرض این دو بخش نیز مخفی هستند. با کلیک کردن بر روی بخش To این دو گزینه نیز اضافه می‌شوند.
