--- a/_posts/2014-12-05-gmail.markdown
+++ b/_posts/2014-12-05-gmail.markdown
@@ -31,7 +31,8 @@ tags: [gmail]
 
 
  Guide : Ctrl + ;
-
+یک چیز مهم در استفاده از ابزار خط کش، پنل Info است. چراکه هنگام اندازه گیری ها، اطلاعات مورد نیاز در این پنل نشان داده میشود.
+. معمولا این پنل در سمت راست کنار پنل ها نشان داده می شود اما اگر این پنل اکنون وجود ندارد، میتوانید از منوی Windows بخش Info را نمایش دهید.
 # 2. بخش‌های Cc و Bcc را پر کنید.
    به صورت پیش فرض این دو بخش نیز مخفی هستند. با کلیک کردن بر روی بخش To این دو گزینه نیز اضافه می‌شوند.
 
