--- a/_posts/2014-12-05-gmail.markdown
+++ b/_posts/2014-12-05-gmail.markdown
@@ -36,24 +36,30 @@ tags: [gmail]
 
    ![alt text]({{site.url}}/assets/img/2.jpg)
 
-# 2. بخش‌های Cc و Bcc را پر کنید.
-   به صورت پیش فرض این دو بخش نیز مخفی هستند. با کلیک کردن بر روی بخش To این دو گزینه نیز اضافه می‌شوند.
+    # 2. بخش‌ها? Cc و Bcc را پر کن?د.
+       به صورت پ?ش فرض ا?ن دو بخش ن?ز مخف? هستند. با کل?ک کردن بر رو? بخش To ا?ن دو گز?نه ن?ز اضافه م?‌شوند.
 
-   ![alt text]({{site.url}}/assets/img/post1.2.jpg)
+       ![alt text]({{site.url}}/assets/img/post1.2.jpg)
 
-# 3. پاسخ را به همه ارسال کنید
-اگر در ایمیل‌های گروهی فراموش می‌کنید که پاسخ خودتان را برای همه ارسال کنید می‌توانید به تنظیمات رفته و این  
-گزینه را به صورت پیشفرض فعال کنید. به مسیر Setting> General> Default reply behaviour رفته و تیک گزینه ی  
-reply all را بزنید. از این پس به جای گزینه ی reply، گزینه‌ی reply all را مشاهده خواهید کرد.  
 
-# 4.  ارسال و بایگانی کردن خودکار ایمیل‌ها
-   اگر شما از آن دسته افراد هستید که پس از این‌که جواب ایمیلی را ارسال کردید آن را بایگانی می‌کنید، می‌تواند با فعال   
-   کردن گزینه‌ی مربوطه در وقت خودتان صرفه جویی کنید. در مسیر Setting>General>Send & Archive با فعال کردن   
-   گزینه‌ی Show “Send & Archive” button in reply کار خودتان را ساده‌تر کنید و ضمن ارسال ایمیل آن را نیز به صورت   
-   خودکار به بایگانی اضافه کنید.
 
-   ![alt text]({{site.url}}/assets/img/post1.3.jpg)
+       ![alt text]({{site.url}}/assets/img/post1.2.jpg)
 
-شاید این نکات بسیار پیش‌پا افتاده به نظر برسند ولی می‌توانند ارزش زیادی داشته باشند و کمک شایانی به شما بکنند.
 
-منبع : www.zoomit.ir
+
+    # 3. پاسخ را به همه ارسال کن?د
+    اگر در ا?م?ل‌ها? گروه? فراموش م?‌کن?د که پاسخ خودتان را برا? همه ارسال کن?د م?‌توان?د به تنظ?مات رفته و ا?ن
+    گز?نه را به صورت پ?شفرض فعال کن?د. به مس?ر Setting> General> Default reply behaviour رفته و ت?ک گز?نه ?
+    reply all را بزن?د. از ا?ن پس به جا? گز?نه ? reply، گز?نه‌? reply all را مشاهده خواه?د کرد.
+
+    # 4.  ارسال و با?گان? کردن خودکار ا?م?ل‌ها
+       اگر شما از آن دسته افراد هست?د که پس از ا?ن‌که جواب ا?م?ل? را ارسال کرد?د آن را با?گان? م?‌کن?د، م?‌تواند با فعال
+       کردن گز?نه‌? مربوطه در وقت خودتان صرفه جو?? کن?د. در مس?ر Setting>General>Send & Archive با فعال کردن
+       گز?نه‌? Show “Send & Archive” button in reply کار خودتان را ساده‌تر کن?د و ضمن ارسال ا?م?ل آن را ن?ز به صورت
+       خودکار به با?گان? اضافه کن?د.
+
+       ![alt text]({{site.url}}/assets/img/post1.3.jpg)
+
+    شا?د ا?ن نکات بس?ار پ?ش‌پا افتاده به نظر برسند ول? م?‌توانند ارزش ز?اد? داشته باشند و کمک شا?ان? به شما بکنند.
+
+    منبع : www.zoomit.ir
