--- a/_posts/2014-12-05-gmail.markdown
+++ b/_posts/2014-12-05-gmail.markdown
@@ -38,7 +38,8 @@ tags: [gmail]
 
 سایز کلی وب سایت شما 960px خواهد بود. بنابراین اولین خط راهنما (Guide) را با رفتن به منوی view و کلیک روی گزینه New Guide و م
 قدار 220px رسم میکنیم.
- دومین خط راهنما را نیز از همین طریق با مقدار 1180px رسم می کنیم. با رسم این دو خط راهنما در وسط وصفح
+ دومین خط راهنما را نیز از همین طریق
+  با مقدار 1180px رسم می کنیم. با رسم این دو خط راهنما در وسط وصفح
  ه 960px فضا برای پیاده سازی وب سایت خواهیم داشت.
 
    ![alt text]({{site.url}}/assets/img/3.jpg)
