--- a/_posts/2014-12-05-tarahi.markdown
+++ b/_posts/2014-12-05-tarahi.markdown
@@ -1,44 +1,20 @@
 ---
 layout: post
-title:  "آموزش کامل طراحی وب سایت در فتوشاپ با جزییات "
+title: "وب سایت چیست؟ "
 permalink: 
 parsidate: جمعه ۱5 آبان ۱۳۹4
 comments: true
-imglink: http://fzangouie.ir/assets/img/1.jpg
+imglink: http://fzangouie.ir/assets/img/web-design1.jpg
 imgauthor: http://florianklauer.de/
 imgauthorname: Florian Klauer
 category: IT
 tags: [gmail]
 ---
-![alt text]({{site.url}}/assets/img/1.jpg)
+![alt text]({{site.url}}/assets/website.jpg)
 
 
-در این ارسال نحوه طراحی یک وب سایت در فتوشاپ را همراه با کلیه جزییا
-ت آموزش خواهم داد.
-این وب سایت به عنوان نمونه برای یک موسسه خدمات اتومبیل طراحی خواهد شد اما با تغییر
-محتوا و تصاویر آن به سادگی برای هر موضوعی قابل استفاده است . در طراحی این وب سایت بسیاری از بخش های
-مورد استفاده و رایج در وب سایت ها مانند لوگو ،نوار جستجو،نوار منو،گالری تصاویر ،پنل ورود،بلاگ ،خدمات
-،توضیحات و سرآیند و بخش پایینی سایت در نظر گرفته شده است.
-
-#1:ایجاد فایل و انجام تنظیمات
-
-فتوشاپ را باز کرده و یک سند با سایز 1400px در 1850px ایجاد نمایید.
-ابزار خط کش (Rule Tool) در این آموزش بسیار کاربردی است
- بنابراین مطمئن شوید که خط کش (Ruler) و خطوط راهنما (Guide) فعال باشند :
+وب سایت اصطلاحا به مکانی در اینترنت گفته می شود که یک صفحه یا تعداد بیشتری از صفحات را در خود جا داده است. به بیان دیگر به مجموعه ای از صفحات در اینترنت که متعلق به مکان خاصی هستند، اصطلاحا وب سایت گفته می شود.
+محتویات وب سایت ها عموما بر روی کامپیوتری به نام سرور قرار دارد و مجموعه ای از سرورها، شبکه جهانی وب را تشکیل می دهند. هر سرور می تواند یک یا تعداد بیشتری از سایت ها را درون خود جای دهد.
+همانند دنیای واقعی که هر انسانی برای خود یک نام منحصر بفردی دارد، در دنیای مجازی یا اینترنت نیز اوضاع به همین منوال است. هر سرور ( یا کامپیوتر) برای آنکه از سرورهای دیگر متمایز شود و نیز هر وب سایت برای آنکه از وب سایت های دیگر متمایز شود، توسط یک شماره شناسایی منحصر بفرد یا IP مشخصی می شود.
 
 
- Ruler : Ctrl + R
- Guide : Ctrl + ;
-
-
-یک چیز مهم در استفاده از ابزار خط کش، پنل Info است. چراکه هنگام اندازه گیری ها، اطلاعات مورد نیاز در این پنل نشان داده میشود.
-. معمولا این پنل در سمت راست کنار پنل ها نشان داده می شود اما اگر این پنل اکنون وجود ندارد، میتوانید از منوی Windows بخش Info را نمایش دهید.
-    ![alt text]({{site.url}}/assets/img/2.jpg)
-
-
-سایز کلی وب سایت شما 960px خواهد بود. بنابراین اولین خط راهنما (Guide) را با رفتن به منوی view و ک
-لیک روی گزینه New Guide و مقدار 220px رسم میکنیم. دومین خط راهنما را نیز از همین طریق با
- مقدار 1180px رسم می کنیم. با رسم این دو خط راهنما در وسط وصفح
-ه 960px فضا برای پیاده سازی وب سایت خواهیم داشت.
-
-   ![alt text]({{site.url}}/assets/img/3.jpg)
