--- a/_posts/2014-12-05-tarahi.markdown
+++ b/_posts/2014-12-05-tarahi.markdown
@@ -10,11 +10,12 @@ imgauthorname: Florian Klauer
 category: IT
 tags: [gmail]
 ---
-![alt text]({{site.url}}/assets/website.jpg)
 
+  ![alt text]({{site.url}}/assets/web-design1.jpg)
 
 وب سایت اصطلاحا به مکانی در اینترنت گفته می شود که یک صفحه یا تعداد بیشتری از صفحات را در خود جا داده است. به بیان دیگر به مجموعه ای از صفحات در اینترنت که متعلق به مکان خاصی هستند، اصطلاحا وب سایت گفته می شود.
 محتویات وب سایت ها عموما بر روی کامپیوتری به نام سرور قرار دارد و مجموعه ای از سرورها، شبکه جهانی وب را تشکیل می دهند. هر سرور می تواند یک یا تعداد بیشتری از سایت ها را درون خود جای دهد.
 همانند دنیای واقعی که هر انسانی برای خود یک نام منحصر بفردی دارد، در دنیای مجازی یا اینترنت نیز اوضاع به همین منوال است. هر سرور ( یا کامپیوتر) برای آنکه از سرورهای دیگر متمایز شود و نیز هر وب سایت برای آنکه از وب سایت های دیگر متمایز شود، توسط یک شماره شناسایی منحصر بفرد یا IP مشخصی می شود.
 
 
+  ![alt text]({{site.url}}/assets/website.jpg)
