--- a/_posts/2014-12-05-tarahi.markdown
+++ b/_posts/2014-12-05-tarahi.markdown
@@ -11,7 +11,7 @@ category: IT
 tags: [gmail]
 ---
 
-  ![alt text]({{site.url}}/assets/web-design1.jpg)
+  ![alt text]({{site.url}}/assets/img/web-design1.jpg)
 
 وب سایت اصطلاحا به مکانی در اینترنت گفته می شود که یک صفحه یا تعداد بیشتری از صفحات را در خود جا داده است. به بیان دیگر به مجموعه ای از صفحات در اینترنت که متعلق به مکان خاصی هستند، اصطلاحا وب سایت گفته می شود.
 محتویات وب سایت ها عموما بر روی کامپیوتری به نام سرور قرار دارد و مجموعه ای از سرورها، شبکه جهانی وب را تشکیل می دهند. هر سرور می تواند یک یا تعداد بیشتری از سایت ها را درون خود جای دهد.
