--- a/_posts/2014-12-05-tarahi.markdown
+++ b/_posts/2014-12-05-tarahi.markdown
@@ -18,4 +18,4 @@ tags: [gmail]
 همانند دنیای واقعی که هر انسانی برای خود یک نام منحصر بفردی دارد، در دنیای مجازی یا اینترنت نیز اوضاع به همین منوال است. هر سرور ( یا کامپیوتر) برای آنکه از سرورهای دیگر متمایز شود و نیز هر وب سایت برای آنکه از وب سایت های دیگر متمایز شود، توسط یک شماره شناسایی منحصر بفرد یا IP مشخصی می شود.
 
 
-  ![alt text]({{site.url}}/assets/img/website.jpg)
+  ![alt text]({{site.url}}/assets/website.jpg)
