--- a/_posts/2014-12-05-tarahi1.markdown
+++ b/_posts/2014-12-05-tarahi1.markdown
@@ -7,8 +7,8 @@ comments: true
 imglink: http://fzangouie.ir/assets/img/1.jpg
 imgauthor: http://florianklauer.de/
 imgauthorname: Florian Klauer
-category: IT
-tags: [gmail]
+category: general
+tags: [ویندوز]
 ---
 ![alt text]({{site.url}}/assets/img/1.jpg)
 
