--- a/_posts/2014-12-05-tarahi.markdown
+++ b/_posts/2014-12-05-tarahi.markdown
@@ -7,8 +7,8 @@ comments: true
 imglink: http://fzangouie.ir/assets/img/web-design1.jpg
 imgauthor: http://florianklauer.de/
 imgauthorname: Florian Klauer
-category: general
-tags: [ویندوز]
+category: IT
+tags: [gmail]
 ---
 
   ![alt text]({{site.url}}/assets/img/web-design1.jpg)
